--- a/src/app/components/creator-sections/writing-recipe/individual-input-form/individual-input-form.component.html
+++ b/src/app/components/creator-sections/writing-recipe/individual-input-form/individual-input-form.component.html
@@ -31,7 +31,7 @@
                 <img src="kitchen-trash-bin.png" (click)="deleteImage()" />
                 <img *ngSwitchCase="'file'" class="uploadedImage" [src]="url" />
                 <span class="uploadPercentage" *ngIf="showProgress"
-                    >{{ progress }}%</span
+                    >Uploading {{ progress }}%</span
                 >
             </div>
         </ng-template>
