Added style to the app writing section

--- a/src/app/components/creator-sections/session-expired/session-expired.component.css
+++ b/src/app/components/creator-sections/session-expired/session-expired.component.css
@@ -3,6 +3,11 @@ span {
     font-size: 20px;
     width: 80%;
 }
+.outerBlock {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 :host {
     display: flex;
     justify-content: space-around;
