--- a/src/app/components/creator-sections/writing-recipe/individual-input-form/individual-input-form.component.css
+++ b/src/app/components/creator-sections/writing-recipe/individual-input-form/individual-input-form.component.css
@@ -103,6 +103,25 @@ input:focus {
     width: 100%;
     overflow: hidden;
 }
+span {
+    font-size: 12px;
+}
+.no1 {
+    position: absolute;
+    bottom: 1px;
+    left: 19px;
+}
+.no2 {
+    position: absolute;
+    bottom: 0px;
+    left: 50%;
+    right: 50%;
+}
+.no3 {
+    position: absolute;
+    bottom: 1px;
+    right: 19px;
+}
 @media only screen and (max-width: 964px) {
     input {
         font-size: 22px;
