Started working on the loading section

--- a/src/app/components/components-for-logged-in-users/account/account.component.html
+++ b/src/app/components/components-for-logged-in-users/account/account.component.html
@@ -1,3 +1,5 @@
 <div class="outerDiv">
     <app-left-options-bar></app-left-options-bar>
+    <router-outlet></router-outlet>
 </div>
+<!-- <app-loading></app-loading> -->
