--- a/src/app/components/components-for-logged-in-users/account/left-options-bar/left-options-bar.component.css
+++ b/src/app/components/components-for-logged-in-users/account/left-options-bar/left-options-bar.component.css
@@ -1,11 +1,14 @@
-.options{
-display:flex;
-flex-direction: row-reverse;
-width: max-content;
-align-items: center;
-justify-content: space-around;
+.options {
+    display: flex;
+    flex-direction: row-reverse;
+    width: max-content;
+    align-items: center;
+    justify-content: space-around;
 }
-.options img{
+.ac {
+    background-color: red;
+}
+.options img {
     width: 20px;
     margin: 3px;
 }
