--- a/src/app/components/components-for-logged-in-users/profile/profile.component.html
+++ b/src/app/components/components-for-logged-in-users/profile/profile.component.html
@@ -1,1 +1,6 @@
-<p>profile works!</p>
+<div>
+    <span>User Name</span>
+    <img />
+    <button>Log Out</button>
+    <button>Delete Account</button>
+</div>
