--- a/src/app/components/creator-sections/writing-recipe/parent-writing-recipe/writing-top-bar/writing-top-bar.component.html
+++ b/src/app/components/creator-sections/writing-recipe/parent-writing-recipe/writing-top-bar/writing-top-bar.component.html
@@ -1,2 +1,2 @@
-<button>Save As Draft</button>
-<input type="submit" value="Publish" />
+<button (click)="uploadDraft()">Save As Draft</button>
+<button type="submit">Publish</button>
