--- a/src/app/components/details-about-articles/details-about-articles.component.html
+++ b/src/app/components/details-about-articles/details-about-articles.component.html
@@ -1,4 +1,5 @@
 <div *ngIf="data">
+    <app-author-section></app-author-section>
 <div class="upperPortion">
     <span>{{data.name}}</span>
     <app-multi-media-details-intro [imageUrl]="data.image_url"></app-multi-media-details-intro>
