Working on detail section

--- a/src/app/components/details-about-articles/author-section/author-details/author-details.component.html
+++ b/src/app/components/details-about-articles/author-section/author-details/author-details.component.html
@@ -1,8 +1,8 @@
 <div class="authorSectionLoadingComponent">
     <img class="imageLogoAuthorData" src="accountProfile.png">
     <div class="authorSectionConainer">
-    <span class="nameAuthorData">Author:</span>
+    <span class="nameAuthorData">Author:{{name}}</span>
     <div class="authorSectionLine"></div>
-    <span class="datePostedAuthorSectionData">Date Posted:</span>
+    <span class="datePostedAuthorSectionData">Date Posted:{{date}}</span>
     </div>
     </div>
