--- a/src/app/components/details-about-articles/like-dislike/like-dislike.component.html
+++ b/src/app/components/details-about-articles/like-dislike/like-dislike.component.html
@@ -1,3 +1,3 @@
 <button (click)="like()">Like</button>
 <button (click)="dislike()">Dislike</button>
-<button>Save</button>
+<button (click)="save()">Save</button>
