--- a/src/app/components/details-about-articles/comment-section/post-comment/post-comment.component.html
+++ b/src/app/components/details-about-articles/comment-section/post-comment/post-comment.component.html
@@ -1,4 +1,6 @@
 <div>
-    <textarea rows="2"></textarea>
-    <button>Post</button>
+    <textarea rows="2" [formControl]="inputField"></textarea>
+    <button (click)="postComment()">Post</button>
 </div>
+
+
