Loading in profile section

--- a/src/app/components/components-for-logged-in-users/account/account.component.html
+++ b/src/app/components/components-for-logged-in-users/account/account.component.html
@@ -1,6 +1,6 @@
 <div class="outerDiv" *ngIf="loggedInd">
     <app-left-options-bar></app-left-options-bar>
-    <div>
+    <div class="contnetDiv">
       <router-outlet></router-outlet>
     </div>
 </div>
