--- a/src/app/components/explore/loading-cards/loading-cards.component.html
+++ b/src/app/components/explore/loading-cards/loading-cards.component.html
@@ -1,4 +1,4 @@
-<div class="outerDiv" appObserverApi>
+<div class="outerDiv" appObserverApi [url]="url" [individualCard]="givenService">
 
 </div>
 <div class="outerDiv" >
