Made some changes in liked recipe loading

--- a/src/app/components/components-for-logged-in-users/loading-prifle-cards/loading-prifle-cards.component.html
+++ b/src/app/components/components-for-logged-in-users/loading-prifle-cards/loading-prifle-cards.component.html
@@ -1,1 +1,1 @@
-<div appObserverApi [url]="url" [individualCard]="givenService">loading-prifle-cards works!</div>
+<div appObserverApi [url]="url" [individualCard]="givenService" [loading]="loading">loading-prifle-cards works!</div>
