--- a/src/app/components/components-for-logged-in-users/liked-recipe/liked-recipe.component.html
+++ b/src/app/components/components-for-logged-in-users/liked-recipe/liked-recipe.component.html
@@ -1,9 +1,9 @@
-<div class="gridItems">
+<div class="gridItems" *ngIf="!loading">
 <div *ngFor="let dat of data" class="itmes">
     <img src="{{dat.thumbnail}}" (click)="nav(dat.id)" class="imageOfDish">
     <span>{{dat.name}}</span>
     <button>Dislike</button>
 </div>
 </div>
-<app-loading-prifle-cards [url]="'/account/liked'" [inWhichServiceToAddData]="loadingItemService"></app-loading-prifle-cards>
+<app-loading-prifle-cards *ngIf="loading" [url]="'/account/liked'" [inWhichServiceToAddData]="loadingItemService" [loadingService]="loadingItemService"></app-loading-prifle-cards>
 <!-- <app-loading-cards [url]="'/account/liked'" [inWhichServiceToAddData]="loadingItemService"></app-loading-cards> -->
