--- a/src/app/components/components-for-logged-in-users/liked-recipe/liked-recipe.component.html
+++ b/src/app/components/components-for-logged-in-users/liked-recipe/liked-recipe.component.html
@@ -2,7 +2,7 @@
 <div *ngFor="let dat of data" class="itmes">
     <img src="{{dat.thumbnail}}" (click)="nav(dat.id)" class="imageOfDish">
     <span>{{dat.name}}</span>
-    <button>Dislike</button>
+    <button (click)="deleteLiked(dat.id)">Remove</button>
 </div>
 </div>
 <app-loading-prifle-cards *ngIf="loading" [url]="'/account/liked'" [inWhichServiceToAddData]="loadingItemService" [loadingService]="loadingItemService"></app-loading-prifle-cards>
