--- a/src/app/components/components-for-logged-in-users/saved-recipe/saved-recipe.component.html
+++ b/src/app/components/components-for-logged-in-users/saved-recipe/saved-recipe.component.html
@@ -1,1 +1,9 @@
-<p>saved-recipe works!</p>
+<div class="gridItems" *ngIf="!loading">
+    <div *ngFor="let dat of data" class="itmes">
+        <img src="{{dat.thumbnail}}" (click)="nav(dat.id)" class="imageOfDish">
+        <span>{{dat.name}}</span>
+        <button (click)="deleteSaved(dat.id)">Remove</button>
+    </div>
+    </div>
+<app-loading-prifle-cards *ngIf="loading" [url]="'/account/saved'" [inWhichServiceToAddData]="loadingItemService" [loadingService]="loadingItemService"></app-loading-prifle-cards>
+    
