--- a/src/app/components/creator-sections/writing-recipe/parent-writing-recipe/parent-writing-recipe.component.html
+++ b/src/app/components/creator-sections/writing-recipe/parent-writing-recipe/parent-writing-recipe.component.html
@@ -15,3 +15,4 @@
 <app-error-image *ngIf="isThereError"></app-error-image>
 <app-session-expired *ngIf="sessionError"></app-session-expired>
 <app-missing-parameter *ngIf="shouldUploadError"></app-missing-parameter>
+<button (click)="click()">Update value</button>
