--- a/src/app/components/explore/recipe-card/recipe-card.component.css
+++ b/src/app/components/explore/recipe-card/recipe-card.component.css
@@ -1,9 +1,9 @@
 .outerDiv{
-
+   
     padding: 5px 5px 15px 5px;
     display: block;
     width: 300px;
- 
+    height: 98%;
     background-color: white;
     box-shadow: 0px 0px 8px 2px  rgb(177, 176, 176);
     border-radius: 5px;
@@ -32,13 +32,19 @@
 }
 .infoPortion{
     padding-left: 3px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: start;
 }
 :host{
     padding: 15px;
     display: grid;
-    gap: 16px 16px;
+    gap: 26px 16px;
     justify-content: center;
     grid-template-columns: repeat(5,max-content);
+    grid-auto-rows: max-content;
+   
 }
 @media only screen and (max-width:1786px) {
     :host{grid-template-columns: repeat(4,max-content);
@@ -63,16 +69,26 @@
         aspect-ratio: 1;
     }
 }
+
 @media only screen and (max-width:1030px) {
     :host{
-        grid-template-columns: repeat(2,max-content); 
+        grid-template-columns: repeat(2,max-content);
+        grid-auto-rows: max-content; 
     }
     .outerDiv{
         width: 35vw;
-        aspect-ratio: 1;
+        
+        
     }
     .imageOfDish{
         width: 100%;
         aspect-ratio:1;
     }
+}
+@media only screen and (max-width:684px) {
+    .outerDiv{
+        width: 42vw;
+        
+        
+         }
 }
