--- a/src/app/components/explore/explore.component.css
+++ b/src/app/components/explore/explore.component.css
@@ -6,17 +6,25 @@
     height: 100%;
    
 }
+.exploreChangeableContent{
+    margin-bottom: 30px;
+}
 .bottombar{
     display: none;
     position: fixed;
     bottom: 0px;
 }
-@media only screen and (max-width:454px) {
+@media only screen and (max-width:684px) {
     .sidebar{
         display: none;
     }
     .bottombar{
         display: block;
+    }
+    .exploreChangeableContent{
+        grid-column-start: 1;
+        grid-column-end: 3;
+        margin-bottom: 110px;
     }
 }
 :host{
