--- a/src/app/components/explore/loading-cards/loading-cards.component.css
+++ b/src/app/components/explore/loading-cards/loading-cards.component.css
@@ -71,3 +71,10 @@
     aspect-ratio: 1;
 }
   }
+  @media only screen and (max-width:684px) {
+    .outerDiv{
+        width: 42vw;
+        
+        
+         }
+}
