Recipe cards styled

--- a/src/app/components/explore/loading-cards/loading-cards.component.css
+++ b/src/app/components/explore/loading-cards/loading-cards.component.css
@@ -78,3 +78,13 @@
         
          }
 }
+@media only screen and (max-width:402px) {
+  :host{
+      grid-template-columns: repeat(1,max-content); 
+  }
+
+.outerDiv{
+  width: clamp(180px,75vw,300px);
+  aspect-ratio: 1;
+}
+}
