Made the navigation in the bottom bar working

--- a/src/app/components/explore/bottom-bar/bottom-bar.component.html
+++ b/src/app/components/explore/bottom-bar/bottom-bar.component.html
@@ -1,8 +1,6 @@
 <div class="bottombar">
-    
-    <div class="eachpath" *ngFor="let button of buttons">
+    <div class="eachpath" *ngFor="let button of buttons" (click)="nav(button.nav)">
         <img src="{{button.img}}" width="30px" height="40px">
         <span>{{button.path}}</span>
-
     </div>
 </div>
