--- a/src/app/components/explore/side-bar/side-bar.component.html
+++ b/src/app/components/explore/side-bar/side-bar.component.html
@@ -1,5 +1,6 @@
-<div class="sideBar">
-    <span routerLink="my-area">My Area</span>
+<div class="sideBar diffused-border">
+   
     <span routerLink="write">Write</span>
-    <span routerLink="account">Account</span>
+    <span routerLink="account">Account</span> 
+
 </div>
