--- a/src/app/components/explore/bottom-bar/bottom-bar.component.css
+++ b/src/app/components/explore/bottom-bar/bottom-bar.component.css
@@ -5,5 +5,15 @@
     justify-content: space-around;
     background-color: white;
     width: 100vw;
-    height: 55px;
+     padding: 4px 0px;
+     font-size: 14px;
+}
+img{
+    height: 30px;
+    width: 30px;
+}
+.eachpath{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
