--- a/src/app/components/explore/side-bar/side-bar.component.css
+++ b/src/app/components/explore/side-bar/side-bar.component.css
@@ -9,9 +9,14 @@
 }
 :host{
     
-    border-right: 2px solid orange;
-    border-top:2px solid grey;
+    
+    
     background-color: var(--background-color);
+}
+.kk{
+   
+    position: sticky;
+    top: 0px;
 }
 .sideBar span{
     cursor: pointer;
@@ -19,5 +24,26 @@
     padding: 20px;
 }
 .sideBar span:hover{
-    background-color: grey;
+    background-color: rgba(255, 255, 70, 0.877);
 }
+.diffused-border {
+    position: relative;
+  }
+  
+  .diffused-border::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 2px; 
+    height: 100%; 
+    background: rgb(255, 186, 58); /* Border color */
+    box-shadow: 0px 0px 15px 0.1px rgb(236, 163, 28); /* Diffused effect */
+  }
+  :host{
+    display: block;
+    height: 100dvh;
+    position: sticky;
+    top: 0px;
+  }
+  
