Styling the detail component but commnet section is left

--- a/src/app/components/authentication/log-in/log-in.component.html
+++ b/src/app/components/authentication/log-in/log-in.component.html
@@ -3,9 +3,9 @@
     <input placeholder="Enter username or password">
     <input placeholder="Enter password" type="text">
     <button>Login</button>
-    <span class="footer"><a [routerLink]="'/signUp'">Create account</a> or Sign-Up Using!</span>
+    <span class="footer">Sign-Up Using!</span>
     <div class="images">
-   
+    
         <a [href]="googleUrl"><img src="google.png"></a>
         <img src="twitter.png" (click)="navToX()">
     </div>
