--- a/src/app/components/authentication/sign-in-msg/sign-in-msg.component.html
+++ b/src/app/components/authentication/sign-in-msg/sign-in-msg.component.html
@@ -1,4 +1,4 @@
 <div>
     <span>You need to Login</span>
-    <button (click)="redirect()">Login</button>
-</div>
+    <button (click)="redirect()" class="loginButton">Login</button>
+</div> 
