--- a/src/app/components/details-about-articles/description-component/description-component.component.css
+++ b/src/app/components/details-about-articles/description-component/description-component.component.css
@@ -1,7 +1,7 @@
 :host{
     display: block;
     width: 100%;
-    
+   
 }
 span{
     font-size: 24px;
@@ -10,13 +10,20 @@ span{
 }
 p{
     font-size: 18px;
+    padding: 5px;
 }
 @media screen and (max-width:1547px) {
     :host{
         background-color: transparent;
         grid-column-start: 1;
         grid-column-end: 3;
-        grid-row-start: 1;
-        grid-row-end: 2;
+        grid-row-start: 2;
+        grid-row-end: 3;
     }
+}
+@media screen and (max-width:554px) {
+    p{
+        font-size: 16px;
+    }
+    
 }
