--- a/src/styles.css
+++ b/src/styles.css
@@ -3,22 +3,13 @@
     --border: 2px solid transparent;
     --creator-write-validInput:rgb(150, 150, 13);
     --creator-write-invalid:red;
+    --color-button-orange:orange;
 }
 body{
     padding: 0px;
     margin: 0px;
 }
-.forms{
-   
-    transform: translate(0px,-50%);
-    box-shadow: 0px 0px 14px 1px black;
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    width: max-content;
-    padding: 25px;
-}
+
 a:visited{
     color: rgb(80, 80, 247);
 }
