--- a/src/app/components/authentication/log-in/log-in.component.css
+++ b/src/app/components/authentication/log-in/log-in.component.css
@@ -12,15 +12,63 @@
 .images img{
     width: 30px;
 }
-button{
-    margin: 5px 0px;
-    font-size: 16px;
+input{
+    border: 1px solid black;
+    border-radius: 2px;
 }
-:host{
-    width: 100vw;
-    height: 100vh;
+input:focus{
+    outline: 2px solid orange;
+}
+.forms{
+   margin: 100px auto;
+    
+    box-shadow: 0px 0px 14px 1px black;
+    border-radius: 10px;
     display: flex;
     align-items: center;
-    justify-content: center;
-
+    flex-direction: column;
+    width: max-content;
+    padding: 25px;
+}
+:host{
+   display: block;
+   height: 100dvh;
+    
+}
+button{
+    border: 2px solid orange;
+    border-radius: 5px;
+    background-color: transparent;
+    padding: 5px;
+    font-weight: 600;
+    margin: 5px 0px;
+    transition: all 0.2s linear;
+}
+a{
+    position: relative;
+    top: 3px;
+}
+img{
+    border: 2px solid transparent;
+    border-radius: 5px;
+    padding: 5px;
+    transition: all 0.2s linear;
+}
+button:hover{
+    background-color: orange;
+    border: 2px solid orange;
+}
+img:hover{
+    background-color: orange;
+    border: 2px solid orange;
+}
+@media only screen and (max-width:304px){
+    .forms{
+        width: 150px;
+    } input{
+        width: 125px;
+        font-size: 13px;
+    } img{
+        margin-right: 20px;
+    }
 }
