--- a/src/app/components/authentication/sign-in-msg/sign-in-msg.component.css
+++ b/src/app/components/authentication/sign-in-msg/sign-in-msg.component.css
@@ -15,8 +15,24 @@ span{
     font-weight: 600;
 }
 button{
+    display: block;
     font-weight: 550;
     margin: 10px;
     padding: 3px 20px;
-
+    border: 4px solid var(--color-button-orange);
+    background-color: transparent;
+    transition: all 0.2s linear;
+    border-radius: 2px;
+}
+button:focus{
+    background-color: orange;
+    outline: 0px solid black;
+}
+button:hover{
+    background-color: orange;
+}
+@media screen and (max-width:266px) {
+    span{
+        font-size: 22px;
+    }
 }
